# be-more-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  config.json  doctor.sh  pyproject.toml  requirements.txt  setup-mac.sh  setup-pi.sh  setup.sh
.github/workflows/: ci.yml
bmo/: __init__.py  config.py  faces.py  main.py  orq_client.py  stt.py  wakeword.py
docs/: README.md  booth-runbook.md  visitor-cards.md
docs/superpowers/plans/: 2026-04-27-bmo-orq.md  2026-04-27-modernize-tooling.md
docs/superpowers/specs/: 2026-04-27-bmo-orq-design.md  2026-04-27-modernize-tooling-design.md  2026-04-28-realtime-design.md
orq/: agent.json  dataset.jsonl
orq/evaluators/: helpfulness.md  length.md  on_personality.md
scripts/: bootstrap_agent.py  bootstrap_dataset.py  bootstrap_evaluators.py  chat.py  face_trace.py  realtime_chat.py  vad_meter.py
src/bmo/: __init__.py  audio_io.py  config.py  faces.py  logging.py  main.py  observability.py  orq_client.py  realtime.py  stt.py  tts.py  vad.py  vision.py  wakeword.py
tests/: conftest.py  test_audio_io.py  test_config.py  test_faces.py  test_live_agent.py  test_logging.py  test_main_loop.py  test_orq_client.py  test_stt.py  test_tts.py  test_vision.py  test_wakeword.py
